# ProjectWyvern

./: .gitignore  README.md  pyproject.toml
docs/contracts/: wyvern.openapi.json  wyvern.semantic.openapi.json
docs/schemas/: wyvern.mission.v1.schema.json  wyvern.replay.v1.schema.json  wyvern.scene_object.v1.schema.json  wyvern.semantic_task.v1.schema.json  wyvern.telemetry.v1.schema.json  wyvern.world_state.v1.schema.json
scripts/: setup-px4-sitl.sh  test-sitl.sh
src/wyvern/: app.py  config.py  context.py  contracts.py  hashing.py  state_machine.py  store.py
src/wyvern/routes/: __init__.py  commands.py  control_room.py  events.py  health.py  missions.py  timeline.py  vehicles.py
src/wyvern/services/: archive_exporter.py  chimera_client.py  event_emitter.py  executor.py  safety_guard.py  validation.py
src/wyvern/vehicle/: adapter.py  mavsdk_adapter.py  mock_adapter.py  telemetry_collector.py
tests/: conftest.py  test_archive_exporter.py  test_chimera_client.py  test_commands_api.py  test_compliance.py  test_contracts.py  test_control_room.py  test_events.py  test_executor.py  test_missions_api.py  test_state_machine.py  test_validation.py
tests/fixtures/: sample_mission.json
