[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wyvern"
version = "0.1.0"
description = "Constitutional aerial autonomy platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
mavsdk = ["mavsdk>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wyvern"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
